--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<img src="Bez nazwy-3.png" style="max-width:100%;height:auto;width:auto;">
+		<img src="Bez nazwy-3.png" style="height:100%;width:100%;">
 	</body>
 </html>
 
